@@ -15,6 +15,9 @@ value defined internally.
 \fBBAD\fR = \fI"red"\fR
 Defines color used for some words occuring in bad context.
 .TP
+\fBBLANK\fR = \fI"lightgray"\fR
+Defines color used to display eblank lines.
+.TP
 \fBBRACKET\fR = \fI"blue"\fR
 Defines color used for brackets.
 .TP
